@@ -19,6 +19,9 @@ this repository contains the full copyright notices and license terms. -->
         <record model="ir.action.act_window" id="act_product_cost_history_form">
             <field name="name">Product Cost History</field>
             <field name="res_model">product.product.cost_history</field>
+            <field name="domain"
+                eval="[If(Eval('active_ids', []) == [Eval('active_id')], ('product', '=', Eval('active_id')), ('product', 'in', Eval('active_ids')))]"
+                pyson="1"/>
         </record>
         <record model="ir.action.act_window.view" id="act_product_cost_history_form_view1">
             <field name="sequence" eval="10"/>
@@ -30,18 +33,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="view" ref="product_cost_history_view_graph"/>
             <field name="act_window" ref="act_product_cost_history_form"/>
         </record>
-
-        <record model="ir.action.wizard" id="wizard_product_cost_history_open">
-            <field name="name">Cost History</field>
-            <field name="wiz_name">product.product.cost_history.open</field>
-            <field name="model">product.product</field>
-        </record>
         <record model="ir.action.keyword"
-                id="act_product_cost_history_keyword1">
+            id="act_product_cost_history_keyword1">
             <field name="keyword">form_relate</field>
             <field name="model">product.product,-1</field>
-            <field name="action" ref="wizard_product_cost_history_open"/>
+            <field name="action" ref="act_product_cost_history_form"/>
         </record>
-
     </data>
 </tryton>
