@@ -1,3 +1,5 @@
+* Use relate to show product cost history
+
 Version 4.6.0 - 2017-10-30
 * Bug fixes (see mercurial logs for details)
 
